# ChangeLog for net-www/apache
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.146 2004/05/05 14:34:40 zul Exp $

  06 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild:
  If use docs is enabled make the symlink for apache-manual if not. Dont. The
  manual is going to be installed anyways because its apart of the setup for
  apache. Closes #50060.

  06 May 2004; <zul@gentoo.org> apache-1.3.29-r1.ebuild:
  Added dependency on db. Closes #49556.

  04 May 2004; Jason Wever <weeve@gentoo.org> apache-2.0.49-r1.ebuild:
  Stable on sparc.

  04 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild:
  Makeopts fix. Closes #49843.

  04 May 2004; Chuck Short <zul@gentoo.org> files/2.0.49/apache2.initd:
  Added postgres to init script.

  04 May 2004; Chuck Short <zul@gentoo.org> files/apache.rc6:
  Added postgres to init script.

  02 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild:
  Backed out patches.

  02 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild,
  files/patches/2.0.49-r1/Readme.PATCHES:
  Updated patches readme.

  02 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild:
  Marked stable on alpha.

  02 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild,
  files/patches/2.0.49-r1/00_ssl_engine.patch,
  files/patches/2.0.49-r1/Readme.PATCHES:
  Added two patches for ssl issues.

  01 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild:
  Marked stable for x86.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> apache-1.3.29-r1.ebuild:
  Add inherit eutils

  29 Apr 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild:
  Added support for the apache-manual wrapper. To enable it. Add "doc" to your
  use-flags. Closes #48066.

*apache-1.3.29-r2 (26 Apr 2004)

  26 Apr 2004; Chuck Short <zul@gentoo.org> apache-1.3.29-r2.ebuild,