@@ -1,9 +1,9 @@
 MD5 406289807ec3ab35345d70b58fb810dd apache-1.3.29-r2.ebuild 7144
-MD5 22cb97357635d8dd40d7c0f7595105f6 apache-2.0.49-r1.ebuild 11912
+MD5 de1181a4f7f7dac0686cfabeda58610b apache-2.0.49-r1.ebuild 11985
 MD5 738de16a708fdae922876faebfa4ddd7 apache-2.0.48-r4.ebuild 12398
 MD5 7e76722e90bde33e6ba450b1c3e795f8 apache-1.3.29-r1.ebuild 7441
-MD5 ea96abae5deb246f351efaea6def3719 apache-2.0.49.ebuild 12693
-MD5 e236d3830fc3195b0e8a92524578f2bf ChangeLog 27054
+MD5 3fb5ff6cadc21fb817bf01cda83d0045 apache-2.0.49.ebuild 12698
+MD5 dc8af02b0b69a1c179dfb9b2f44d6174 ChangeLog 27210
 MD5 5b6dd438f81019e56fa641841c0c13fe metadata.xml 501
 MD5 d4b8a4908870107e15cc1edbd0ec6ebb files/apache-1.3.29_mod_auth_db.patch 729
 MD5 161245c7aa1eb785db53b34d6a10be43 files/suexec_pam_gentoo.patch 2149
