@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/apache-2.0.49.ebuild,v 1.11 2004/04/24 13:04:20 zul Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/apache-2.0.49.ebuild,v 1.12 2004/05/06 20:18:21 zul Exp $
 
 inherit flag-o-matic eutils
 
@@ -188,8 +188,7 @@ src_compile() {
 		--with-mpm=${MPM:=prefork} \
 		--enable-layout=Gentoo \
 		--with-program-name=apache2 \
-		--host=${CHOST} ${myconf} || die "bad ./configure"
-		#--with-mpm={worker|prefork|perchild|leader|threadpool}
+		--host=${CHOST} ${myconf} || die "bad ./configure submit bug report to bugs.gentoo.org. Include your config.log."
 
 	emake || die "problem compiling Apache2 :("
 
