@@ -1,6 +1,10 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.146 2004/05/05 14:34:40 zul Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.147 2004/05/06 20:18:21 zul Exp $
+
+  07 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild,
+  apache-2.0.49.ebuild:
+  Improved error message on what to do if ./configure failed.
 
   06 May 2004; Chuck Short <zul@gentoo.org> apache-2.0.49-r1.ebuild:
   If use docs is enabled make the symlink for apache-manual if not. Dont. The
